# ossp-uuid-win32

./: CMakeLists.txt  Makefile.in  README.md  uuid.pc.in  uuid_prng.c  uuid_time.h
perl/: Makefile.PL
